0.6
Modified ChangeDeriver task to set the timestamp of deleted records to the current time.

0.5
Modified command line date format to avoid use of spaces.

0.4
Modified mysql dump task to produce consistent snapshots.
Added the ability to skip "current" tables when importing to mysql.
Optimised mysql change reading queries.

0.3
Added mysql table truncator task.
Updated segment xml processing code to handle timestamps.
Made xml date processing during xml reading optional to improve performance.
Added buffer tasks to allow pipeline processing to be split across multiple threads.
Change reading and writing from a mysql database is now working, at least for simple test cases.

0.2
Added Main-Class feature to the jar manifest simplifying program launch.
Added a shell launch script to simplify running on unix/linux.
Added a readme with basic installation instructions.
Added xml date parsing support.
Fixed database dump code to read the "current" tables.
Added a task for reading changes from a database.
Added a task for writing changes to a database.
Added a task for truncating database tables.
Improved mysql import performance by disabling indexes and locking tables.

0.1
Initial version.