@@ -89,7 +89,7 @@ public class SegmentReader extends EntityReader<Segment> {
 		
 		try {
 			id = resultSet.getLong("id");
-			timestamp = resultSet.getTimestamp("timestamp");
+			timestamp = new Date(resultSet.getTimestamp("timestamp").getTime());
 			from = resultSet.getLong("node_a");
 			to = resultSet.getLong("node_b");
 			tags = resultSet.getString("tags");
